# infra-workspace

./: .gitignore  README.md  infra-workspace.code-workspace
.github/workflows/: terraform_apply.yaml  terraform_plan.yaml
mlops/: pyproject.toml
mlops/projects/sample-pipeline/pipelines/: sample_train_pipeline.py
mlops/projects/sample-pipeline/tests/pipelines/: test_sample_train_pipeline.py
terraform/: main.tf
terraform/gcp/artifact_registry/: main.tf
terraform/gcp/gcs/: main.tf  outputs.tf
terraform/gcp/iam/: main.tf  outputs.tf  variables.tf
terraform/gcp/vertex/: main.tf  variables.tf
terraform/gcp/vpc/: main.tf  outputs.tf  variables.tf
