[tool.poetry]
name = "mlops-with-vertex-ai"
version = "0.1.0"
description = "A project utilizing Vertex AI for MLOps."
authors = ["zippowriter <kono_haruhi@cyberagent.co.jp>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.sample-pipeline.dependencies]
google-cloud-aiplatform = {extras = ["pipelines"], version = "^1.54.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
